--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
